--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+#header{
+    height: 15%;
+}
+
 #far_right{
     width: 100px;
     height: 50px;
@@ -16,3 +20,46 @@
     display: inline-block;
 }
 
+#logo {
+    margin-top: 200px;
+    text-align: center;
+}
+
+#search{
+    width: 600px;
+    border-color: rgb(214, 217, 220);
+    border-radius: 25px;
+}
+
+#search_box{
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+#buttons{
+    text-align: center;
+    margin-bottom: 175px;
+}
+
+#search_button{
+    margin-right: 10px;
+}
+
+#lucky_button{
+    margin-left: 10px;
+}
+
+#footer{
+    background: #f2eeee;
+    height: 50px;
+    text-align: center;
+}
+
+#content{
+    height: 70%;
+}
+
+#carbon_text{
+    background-color:#f2eeee;
+}
